[package]
name = "Cuboot"
version = "0.1.0"
edition = "2021"

[dependencies]

embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [ "defmt", "stm32f103rc", "memory-x", "time-driver-any"]  }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768"
]}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }

panic-halt = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }

oled = { path = "driver/oled" }
lidar = { path = "driver/lidar" }

[[bin]]
name = "Cuboot"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]