[package]
name = "lidar"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", git="https://github.com/embassy-rs/embassy.git", features = [ "defmt", "stm32f103rc", "memory-x"]  }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
