[package]
name = "oled"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embassy-futures = "0.1.1"
embassy-sync = "0.6.1"
embassy-time = { git="https://github.com/embassy-rs/embassy.git", features = ["tick-hz-32_768"] }
embassy-stm32 = { git="https://github.com/embassy-rs/embassy.git", features = [ "defmt", "stm32f103rc", "memory-x"]  }
panic-halt = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

